git
- Restructuring code for better modularisation.
	- Secondary goal is to fix compiling on Windows and OS/2.

1.9
- Fixed displaying tags.
- Fixed saving disc number and track total.

1.8
- Docks and menubar now use the same context menu as the toolbar does.
- Added an option to the Settings menu for locking the interface.
- Added an option for hiding the statusbar.
- Added a 'minimal' UI that can be enabled by hiding the main toolbar.
- Added a button for navigating to parent directory.
- Combined reload and stop scan buttons.
- It's now possible to set a root directory in the directory tree.
- Introduced support for bookmarks.
- Split some of the code into libraries.

1.7
- Enabled reordering and enabling/disabling of columns in the main view.
- Text fields now scroll to the begin when changing editable track.
- Fixed a regression with renaming files and directories.
- Field processor dialog now remembers its size.
- Fixed "dimming background for subdirectories" sometimes being inaccurate.

1.6
- Fixed encoding setting being corrupted on startup.
- Hopefully fixed encoding problems with special (eg. Cyrillic) characters.
- Ogg Vorbis tags now use the official format for cover art.
	- Retained read only support for legacy ("EasyTag") covers. (A bit troublesome.)
- Remember to enable "convert legacy cover art" from the settings!
	- Disabled by default to not cause unpleasant surprises (legacy MP3 players or so?).

1.5
- Revised some code.
- CDDB track info can now be edited.
- Fixed bug that prevented applying CDDB data on tracks.

1.4
- Fixed selection problems in files list.
- Numeric fields (spinboxes) now clear their value if selected track doesn't have that value set.
- Subdirectory highlighting now uses translucent colors.

1.3
- Hid 'Length' column in files list.
- Files list now doesn't clear the selection when clicking on empty space.
- Enabled sorting in the files list.
- Added option to dim background color for rows of subdirectories.