@@ -9,3 +9,4 @@ QT += network
 FORMS   += $$ROOT/ui/CddbSearchDialog.ui
 HEADERS += Cddb.h CddbPrivate.h CddbSearchDialog.h
 SOURCES += Cddb.cpp CddbPrivate.cpp CddbSearchDialog.cpp
+
