@@ -1,6 +1,7 @@
 git
 - Restructuring code for better modularisation.
 	- Secondary goal is to fix compiling on Windows and OS/2.
+- Changed the order of Processor dialog pages.
 
 1.9
 - Fixed displaying tags.
